<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/code5"
    tools:context=".AddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/textFieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="110dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="110dp"
                android:background="@drawable/edit_linear"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="192dp"
                    android:layout_height="67dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/logo_totallybizarre_color" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/etTitle"
                    android:inputType="text"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/etDesc"
                    android:inputType="textMultiLine"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/mDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:hint="@string/etMDate"
                    android:autofillHints=""
                    android:inputType="date" /> <!--kalo eror apus-->

                <Spinner
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:text="@string/etStatus"
                    android:focusable="false"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/btnDoc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_round"
                    android:layout_marginTop="10dp"
                    android:text="Document"
                    android:textColor="@color/code6"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnDoc">

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSubmit"
                        android:background="@drawable/button_round"
                        android:layout_margin="10dp"
                        android:textColor="@color/code6"/>

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/btnCancel"
                        android:background="@drawable/button_round"
                        android:textColor="@color/code6"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>