<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/code5"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/textFieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="110dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="110dp"
                android:background="@drawable/edit_linear"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="192dp"
                    android:layout_height="67dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/logo_totallybizarre_color" />

                <EditText
                    android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/fName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/lName"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/fui_email_hint"
                    android:inputType="textEmailAddress"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lName" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textSize="14sp"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/bod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:focusableInTouchMode="false"
                    android:hint="@string/dob"
                    android:inputType="" />

                <EditText
                    android:id="@+id/addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/address"
                    android:inputType="text" />

                <Spinner
                    android:id="@+id/role"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:spinnerMode="dropdown" />


                <TextView
                    android:id="@+id/picTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proPic" />

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/proPic" />

                <Button
                    android:id="@+id/btnPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_round"
                    android:text="@string/btnChoose"
                    android:textColor="@color/code6"/>

                <Button
                    android:id="@+id/btnSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_round"
                    android:text="@string/ins"
                    android:textColor="@color/code6"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>