<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--kalo eror apus-->

    <ImageButton
        android:id="@+id/imgBtn"
        android:layout_width="231dp"
        android:layout_height="182dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/btnImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fName"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:hint="@string/fName"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@id/imgBtn" />

    <TextView
        android:id="@+id/lName"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:hint="@string/lName"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@id/fName" />

    <TextView
        android:id="@+id/email"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:hint="@string/fui_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@id/lName" />

    <TextView
        android:id="@+id/bod"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:focusableInTouchMode="false"
        android:hint="@string/dob"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <TextView
        android:id="@+id/addr"
        android:layout_width="293dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="59dp"
        android:autofillHints=""
        android:hint="@string/address"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@id/bod" />

    <TextView
        android:id="@+id/role"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addr"
        tools:ignore="LabelFor" />



    <Button
        android:id="@+id/btnSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/fui_button_text_save"
        android:background="@drawable/button_round"
        android:textColor="@color/code6"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="@id/role"
        app:layout_constraintRight_toRightOf="@id/role"
        app:layout_constraintTop_toBottomOf="@id/role" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/bod"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/kue" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/fName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtn"
        app:srcCompat="@drawable/nama" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/lName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/nama" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:srcCompat="@drawable/surat" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="33dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/home" />

</androidx.constraintlayout.widget.ConstraintLayout>